# cmake_cuda_physics

./: .clang-tidy  .clangd  .gitmodules  CMakeLists.txt  NOTES.txt  README.md  build.bat  build.ps1  build.sh  out.txt  run.sh  shaders.ps1  shaders.sh  spirv_cross_cConfig.cmake.debugging_attempt
projects/program/: CMakeLists.txt
projects/program/include/: check.hpp  colourmap_buf.hpp  hello.hpp  hellocuda.hpp
projects/program/include/scenetest/: camera.hpp  context.hpp  input.hpp  shader.hpp  sphere.hpp  spirv.hpp
projects/program/source/: basicexample.cpp  demo_singlethread_2d.cpp  demo_singlethread_2d_v2.cpp  hello.cpp  hellocuda.cu  main.cpp
projects/program/source/scenetest/: camera.cpp  context.cpp  demo_render_fps_cube2.cpp  input.cpp  shader.cpp  sphere.cpp  spirv.cpp
projects/program/source/scenetest/shaders/: comp.glsl  comp.spv  frag.glsl  frag.spv  vert.glsl  vert.spv
projects/util2/: CMakeLists.txt  premake5.lua
projects/util2/include/util2/: array_view.hpp  bufferptr.hpp  file.hpp  ifcrash.hpp  string.hpp  type_trait.hpp
projects/util2/include/util2/C/: ifcrash2.h  marker4.h  print.h
projects/util2/source/: file.cpp  ifcrash.cpp  pool.cpp  time.cpp  vec2.cpp
projects/util2/source/C/: file.c  ifcrash2.c  marker4.c  print.c
test/: kcachegrind.sh  measure_perf_valgrind_kcache.md
